service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP  # Internal service, ALB will route traffic here
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
